--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Hideki Yamane <henrich@debian.org>
 Build-Depends: debhelper (>= 9), dh-python,
                python-all,
+               fonttools,
 Standards-Version: 3.9.6
 Homepage: http://robofab.org/
 #Vcs-Git: git://anonscm.debian.org/collab-maint/robofab.git
