--- a/debian/rules
+++ b/debian/rules
@@ -4,4 +4,4 @@
 export PYBUILD_NAME=robofab
 
 %:
-	dh $@  --with python2,python3 --buildsystem=pybuild
+	dh $@  --with python2 --buildsystem=pybuild
